# LBFGS-Lite

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  lbfgs.hpp
src/: CMakeLists.txt  lbfgs_example.cpp  lbfgs_sample.cpp
